Default capsule type settings

--- a/Pod/en.lproj/Localizable.strings
+++ b/Pod/en.lproj/Localizable.strings
@@ -8,9 +8,8 @@
 
 "Edit Favorites" = "Edit Favorites";
 "Top Favorites" = "Top Favorites";
-"favorite" = "favorite";
 "Favorite" = "Favorite";
 "Favorites" = "Favorites";
 "Unfavorite" = "Unfavorite";
 "You have no favorites" = "You have no favorites";
-"Find your pods in the Browse tab, press %@ to add them to your favorites." = "Find your pods in the Browse tab, press %@ to add them to your favorites.";
+"Find your pods in the Explore tab, press %@ to add them to your favorites." = "Find your pods in the Explore tab, press %@ to add them to your favorites.";
