--- a/Pod/en-GB.lproj/Localizable.strings
+++ b/Pod/en-GB.lproj/Localizable.strings
@@ -12,4 +12,4 @@
 "Favorites" = "Favourites";
 "Unfavorite" = "Unfavourite";
 "You have no favorites" = "You have no favourites";
-"Find your pods in the Browse tab, press %@ to add them to your favorites." = "Find your pods in the Browse tab, press %@ to add them to your favourites.";
+"Find your pods in the Explore tab, press %@ to add them to your favorites." = "Find your pods in the Explore tab, press %@ to add them to your favourites.";
